--- a/main.html
+++ b/main.html
@@ -7,6 +7,29 @@
 </head>
 
 <body>
+	<section id="buttons">
+		 <input  class="btn" id="bt-n" type="button" value="applause" onclick="playSound()">
+         <audio  id="audio" src="sounds/sound1.mp3"></audio>
+		
+		 <input class="btn" id="bt-n" type="button" value="boo" onclick="playSound()">
+         <audio id="audio" src="sounds/sound2.mp3"></audio>
+		
+		 <input class="btn" id="bt-n" type="button" value="gasp" onclick="playSound()">
+         <audio id="audio" src="sounds/sound3.mp3"></audio>
+
+		 <input class="btn" id="bt-n" type="button" value="tada" onclick="playSound()">
+         <audio id="audio" src="sounds/sound4.mp3"></audio>
+
+		 <input class="btn" id="bt-n" type="button" value="victory" onclick="playSound()">
+         <audio id="audio" src="sounds/sound5.mp3"></audio>
+		
+		<input class="btn" id="bt-n" type="button" value="wrong" onclick="playSound()">
+         <audio id="audio" src="sounds/sound6.mp3"></audio>
+
+		<input class="stop" id="bt-n" type="button" value="stop" onclick="stopSound()">
+		
+	</section>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
